# WarpBootstrapCompiler0

./: .gitignore  CMakeLists.txt  README.md  TODO.md  conanfile.txt  test.cpp
Compilier/: Main.cpp
Include/Warp/: AbstractSyntaxTreeUtilities.hpp  Common.hpp  Compiler.hpp  CtpgUtilities.hpp  Executor.hpp  Expression.hpp  ExpressionAnalysis.hpp  ExpressionTree.hpp  Function.hpp  Parse.hpp  ParseArithmatic.hpp  Parser.hpp  SanityCheck.hpp  SimpleExecutor.hpp  Terms.hpp  Test.hpp  Tokens.hpp  Utilities.hpp  Utility.hpp
Include/Warp/Parsing/: Arithmatic.hpp  BooleanExpression.hpp  Functions.hpp  Literals.hpp  Modules.hpp  Parser.hpp  Terms.hpp
Include/Warp/Testing/: ParseTest.hpp
Include/Warp/Utilities/: AutoVariant.hpp  FileIO.hpp  LightTuple.hpp  Mathematical.hpp  NotSoUniquePointer.hpp  OwningPointer.hpp  Strings.hpp  TemplateUtilities.hpp
REPL/: Main.cpp
Refrence/: HowCTPGParsesRegexes.cpp  We are number one buh buh buh buh bud da da da da we are number one now watch and learn here's the deal he will slip and slide on a banna peel muhahahahaahahahahaha WHAT ARE YOU DOING.cpp
Scripts/: gcc11.sh  makeout.py  simplify_log.py
Source/: FileIO.cpp  Function.cpp  Main.cpp  Parse.cpp  SimpleExecutor.cpp  a.out
Source/.cache/clangd/index/: Main.cpp.31E9AD18ECF292F3.idx
Test/: Main.cpp  ParseTestData.cpp  ParseTests.cpp
Test/Utilities/: OwningPointer.cpp
Warp/: Math.warp
